--- a/App_Anchors.ipynb
+++ b/App_Anchors.ipynb
@@ -472,7 +472,7 @@
     {
      "data": {
       "text/plain": [
-       "'1771498590528actualizar_texto'"
+       "'2365195280064actualizar_texto'"
       ]
      },
      "execution_count": 13,
@@ -812,7 +812,7 @@
     "    texto = round( valor*area_gato.get() / 100 , 1)\n",
     "    load.config(text=texto)\n",
     "\n",
-    "def principal(evento):\n",
+    "def principal(evento=None):\n",
     "    for entry, label, load in zip(Val_Presion, Val_label, Val_Carga):\n",
     "        actualizar_label(entry, label, load)\n",
     "    Funciones(evento)\n",
@@ -862,22 +862,63 @@
     "    )\n",
     "''')\n",
     "\n",
-    "\n",
-    "Number = []\n",
-    "for i in range(1,len(Val_label)+1):\n",
-    "    Aux = \"Pressure\" + str(i)\n",
+    "# CREATE THE COLUMNS FOR THE DATAS\n",
+    "Number              = []\n",
+    "Number_Lecture      = []\n",
+    "Number_Load         = []\n",
+    "Number_Displacement = []\n",
+    "for i in range(1,25):\n",
+    "    Aux                 = \"Pressure\" + str(i)\n",
+    "    Aux_Lecture         = \"Lecture\" + str(i)\n",
+    "    Aux_Load            = \"Load\" + str(i)\n",
+    "    Aux_Displacement    = \"Displacement\" + str(i)\n",
     "    Number.append(Aux)\n",
+    "    Number_Lecture.append(Aux_Lecture)\n",
+    "    Number_Load.append(Aux_Load)\n",
+    "    Number_Displacement.append(Aux_Displacement)\n",
+    "\n",
     "\n",
     "if conexion is not None:\n",
-    "    pass\n",
-    "else:\n",
     "    for columna in Number:\n",
-    "        cursor.execute(f\"ALTER TABLE ensayos ADD COLUMN {columna} TEXT\")\n",
+    "        try:\n",
+    "            # Intenta agregar la columna\n",
+    "            cursor.execute(f\"ALTER TABLE ensayos ADD COLUMN {columna} REAL\")\n",
+    "        except sqlite3.OperationalError as e:\n",
+    "            if \"duplicate column name\" in str(e):\n",
+    "                pass\n",
+    "            else:\n",
+    "                pass\n",
+    "    for columna in Number_Lecture:\n",
+    "        try:\n",
+    "            # Intenta agregar la columna\n",
+    "            cursor.execute(f\"ALTER TABLE ensayos ADD COLUMN {columna} REAL\")\n",
+    "        except sqlite3.OperationalError as e:\n",
+    "            if \"duplicate column name\" in str(e):\n",
+    "                pass\n",
+    "            else:\n",
+    "                pass\n",
+    "    for columna in Number_Load:\n",
+    "        try:\n",
+    "            # Intenta agregar la columna\n",
+    "            cursor.execute(f\"ALTER TABLE ensayos ADD COLUMN {columna} TEXT\")\n",
+    "        except sqlite3.OperationalError as e:\n",
+    "            if \"duplicate column name\" in str(e):\n",
+    "                pass\n",
+    "            else:\n",
+    "                pass\n",
+    "    for columna in Number_Displacement:\n",
+    "        try:\n",
+    "            # Intenta agregar la columna\n",
+    "            cursor.execute(f\"ALTER TABLE ensayos ADD COLUMN {columna} TEXT\")\n",
+    "        except sqlite3.OperationalError as e:\n",
+    "            if \"duplicate column name\" in str(e):\n",
+    "                pass\n",
+    "            else:\n",
+    "                pass\n",
+    "else:\n",
+    "    pass\n",
     "    \n",
     "        \n",
-    "\n",
-    "\n",
-    "\n",
     "def insertar_ensayo(cursor,nombre,fecha,Division,nivel,area_gato,coeficiente_ensayo,service_load,test_load,LL,LB,LC,diameter_drillhole,steel_data,Area_steel_total,\n",
     "    Modulus_elasticity):\n",
     "    cursor.execute(\"INSERT INTO ensayos (nombre, fecha, Division, nivel, area_gato, coeficiente_ensayo , service_load , test_load , LL , LB , LC ,\"\n",
@@ -886,13 +927,30 @@
     "    (nombre,fecha,Division,nivel,area_gato,coeficiente_ensayo,service_load,test_load,LL,LB,LC,diameter_drillhole,steel_data,Area_steel_total,Modulus_elasticity) )\n",
     "    # ensayo en el nombre del database\n",
     "\n",
-    "    # Obtengo los valores las etiquetas de presión\n",
-    "    valores = [etiqueta.cget(\"text\") for etiqueta in Val_label]\n",
+    "    # Obtengo los valores \n",
+    "    Values_pressure         = [etiqueta.get() for etiqueta in Val_Presion]\n",
+    "    Values_Load             = [etiqueta.cget(\"text\") for etiqueta in Val_Carga]\n",
+    "    Values_Lecture          = [etiqueta.get() for etiqueta in Val_Lect]\n",
+    "    Values_Displacement     = [etiqueta.cget(\"text\") for etiqueta in Val_Deformation]\n",
+    "\n",
     "\n",
     "    # Actualiza la fila en la tabla\n",
-    "    consulta_sql = f\"UPDATE ensayos SET {', '.join([f'{columna} = ?' for columna in Number])} WHERE nombre = ?\"\n",
-    "    valores_actualizacion = valores + [nombre]\n",
-    "    cursor.execute(consulta_sql, valores_actualizacion)\n",
+    "    consulta_sql_pressure = f\"UPDATE ensayos SET {', '.join([f'{columna} = ?' for columna in Number])} WHERE nombre = ?\"\n",
+    "    valores_actualizacion_pressure = Values_pressure + [nombre]\n",
+    "    cursor.execute(consulta_sql_pressure, valores_actualizacion_pressure)\n",
+    "    \n",
+    "    consulta_sql_lecture = f\"UPDATE ensayos SET {', '.join([f'{columna} = ?' for columna in Number_Lecture])} WHERE nombre = ?\"\n",
+    "    valores_actualizacion_lecture = Values_Lecture + [nombre]\n",
+    "    cursor.execute(consulta_sql_lecture, valores_actualizacion_lecture)\n",
+    "\n",
+    "    consulta_sql_load = f\"UPDATE ensayos SET {', '.join([f'{columna} = ?' for columna in Number_Load])} WHERE nombre = ?\"\n",
+    "    valores_actualizacion_load = Values_Load + [nombre]\n",
+    "    cursor.execute(consulta_sql_load, valores_actualizacion_load)\n",
+    "\n",
+    "    consulta_sql_displacement = f\"UPDATE ensayos SET {', '.join([f'{columna} = ?' for columna in Number_Displacement])} WHERE nombre = ?\"\n",
+    "    valores_actualizacion_displacement = Values_Displacement + [nombre]\n",
+    "    cursor.execute(consulta_sql_displacement, valores_actualizacion_displacement)\n",
+    "\n",
     "    conexion.commit()\n",
     "\n",
     "    return cursor.lastrowid #Esta función devuelve el ID de la última fila insertada en la tabla. Esto es útil si necesitas obtener el ID del registro recién insertado.\n",
@@ -922,8 +980,6 @@
     "    Area_steel_total        = Entry_Area_steel_total.get()\n",
     "    Modulus_elasticity      = Entry_Modulus_elasticity.get()\n",
     "\n",
-    "    #if  nombre:\n",
-    "        # Comprobar si el nombre ya existe en la base de datos\n",
     "    cursor.execute(\"SELECT COUNT(*) FROM ensayos WHERE nombre=?\", (nombre,))\n",
     "    existe = cursor.fetchone()[0]\n",
     "\n",
@@ -933,12 +989,13 @@
     "            # Elimina el registro existente\n",
     "            cursor.execute(\"DELETE FROM ensayos WHERE nombre=?\", (nombre,))\n",
     "        \n",
-    "        insertar_ensayo(cursor, nombre, fecha, Division, nivel, area_gato, coeficiente_ensayo, service_load, test_load, LL, LB, LC, diameter_drillhole, steel_data, Area_steel_total, Modulus_elasticity)\n",
-    "        \n",
-    "        conexion.commit()\n",
-    "        actualizar_combobox_ensayos()\n",
-    "        messagebox.showinfo(\"Éxito\", \"Ensayo guardado con éxito.\")\n",
+    "            insertar_ensayo(cursor, nombre, fecha, Division, nivel, area_gato, coeficiente_ensayo, service_load, test_load, LL, LB, LC, diameter_drillhole, steel_data, Area_steel_total, Modulus_elasticity)\n",
     "\n",
+    "            conexion.commit()\n",
+    "            actualizar_combobox_ensayos()\n",
+    "            messagebox.showinfo(\"Éxito\", \"Ensayo guardado con éxito.\")\n",
+    "        else:\n",
+    "            messagebox.showinfo(\"Éxito\" , \"Ensayo no guardado.\")\n",
     "    else:\n",
     "        # Realiza la inserción si no se desea sobrescribir\n",
     "        insertar_ensayo(cursor, nombre, fecha, Division, nivel, area_gato, coeficiente_ensayo, service_load, test_load, LL, LB, LC, diameter_drillhole, steel_data, Area_steel_total, Modulus_elasticity)     \n",
@@ -949,9 +1006,7 @@
     "        actualizar_combobox_ensayos()\n",
     "\n",
     "        messagebox.showinfo(\"Éxito\", \"Ensayo guardado con éxito.\")\n",
-    "\n",
-    "        \n",
-    "\n",
+    "       \n",
     "\n",
     "def mostrar_datos_ensayo():\n",
     "    seleccion = Entry_id_anclaje.get()\n",
@@ -1007,12 +1062,29 @@
     "        Entry_Modulus_elasticity.delete(0, tk.END)\n",
     "        Entry_Modulus_elasticity.insert(0, datos[14])\n",
     "\n",
-    "        for aux, i in zip(Val_label,range(15,15+len(Val_label))):\n",
+    "        inicio = 15\n",
+    "        final = 15+len(Val_Presion)\n",
+    "        for aux, i in zip(Val_Presion,range(inicio,final)):\n",
+    "            aux.delete(0,tk.END)\n",
+    "            aux.insert(0,datos[i])\n",
+    "\n",
+    "        inicio = final\n",
+    "        final = final + len(Val_Lect)\n",
+    "        for aux, i in zip(Val_Lect,range(inicio,final)):\n",
+    "            aux.delete(0,tk.END)\n",
+    "            aux.insert(0,datos[i])\n",
+    "        \n",
+    "        inicio = final\n",
+    "        final = final + len(Val_Carga)\n",
+    "        for aux, i in zip(Val_Carga,range(inicio,final)):\n",
     "            #aux.delete(0,tk.END)\n",
     "            aux.config(text=f\"{datos[i]}\" )\n",
-    "        \n",
     "\n",
-    "\n",
+    "        inicio = final\n",
+    "        final = final + len(Val_Deformation)\n",
+    "        for aux, i in zip(Val_Deformation,range(inicio,final)):\n",
+    "            #aux.delete(0,tk.END)\n",
+    "            aux.config(text=f\"{datos[i]}\" )\n",
     "\n",
     "actualizar_combobox_ensayos()"
    ]
@@ -1034,7 +1106,7 @@
     "Button_1 = Button(frm, text=\"Cerrar\", command=root.destroy).grid(column=9, row=0)\n",
     "\n",
     "# Generar boton de grafico\n",
-    "Button_2 = Button(frm, text=\"Graficar\" , command=Funciones).grid(column=10,row=0)\n",
+    "Button_2 = Button(frm, text=\"Graficar\" , command=principal).grid(column=10,row=0)\n",
     "\n",
     "# Save data\n",
     "guardar_button = tk.Button(frm, text=\"Guardar Ensayo\" , command=guardar_ensayo).grid(column=0 , row=0) # \n",
