Save Data finish

--- a/App_Anchors.ipynb
+++ b/App_Anchors.ipynb
@@ -16,23 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "from    tkinter             import *\n",
-    "from    tkinter             import ttk \n",
+    "from    tkinter             import ttk , messagebox\n",
     "import  tkinter             as tk\n",
     "import  matplotlib.pyplot   as plt\n",
     "from    matplotlib.backends.backend_tkagg import FigureCanvasTkAgg , NavigationToolbar2Tk #Realizar gráficos en tkinter con la librería plt\n",
-    "from    PIL                 import ImageTk, Image , ImageGrab # Cargar imagenes a la ventana\n",
+    "from    PIL                 import ImageTk, Image # Cargar imagenes a la ventana\n",
     "import  numpy               as np\n",
     "from    math                import *\n",
-    "import  pandas              as pd\n",
     "from tkinter.font import Font\n",
     "from scipy.stats import linregress\n",
     "import sqlite3\n",
-    "from tkinter import messagebox"
+    "import os \n",
+    "import sys"
    ]
   },
   {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,10 +184,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Ruta relativa\n",
+    "# Obtén la ruta del directorio del script actual\n",
+    "##script_directory = os.path.dirname(sys.argv[0])\n",
+    "\n",
+    "# Construye la ruta relativa a la imagen\n",
+    "##image_path = os.path.join(script_directory, \"logo_srk.png\")\n",
+    "##imagen_srk = Image.open(image_path)\n",
+    "\n",
+    "##imagen_srk      = imagen_srk.resize((90,30))  # Cambiar el tamaño si es necesario\n",
+    "##imagen_srk_tk   = ImageTk.PhotoImage(imagen_srk)\n",
+    "\n",
+    "# Ruta total\n",
     "# Cargar la imagen\n",
     "imagen_srk      = Image.open(r\"C:\\Users\\jjeri\\OneDrive - SRK Consulting\\SRK!\\TKINTER\\Anchors\\logo_srk.png\")\n",
     "imagen_srk      = imagen_srk.resize((90,30))  # Cambiar el tamaño si es necesario\n",
@@ -207,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,16 +478,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2365195280064actualizar_texto'"
+       "'1865819441792actualizar_texto'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +533,7 @@
     "        return Aux\n",
     "                    \n",
     "    def Vector_x(self):\n",
-    "        Aux_vector = [ Deformation[0] , ((self.RL() * Carga[4]) / (float(Modulus_elasticity.get()) * float(Area_steel_total.get()))) * 10000] # self.RL() da el valor de esa función\n",
+    "        Aux_vector = [ Deformation[0] , ((self.RL() * (Carga[5]-Carga[0])) / (float(Modulus_elasticity.get()) * float(Area_steel_total.get()))) * 10000] # self.RL() da el valor de esa función\n",
     "        return Aux_vector"
    ]
   },
@@ -534,13 +546,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Ruta Relativa se ingreso en el código del logo\n",
+    "# Construye la ruta relativa a la imagen\n",
+    "##image_path_anclaje = os.path.join(script_directory, \"anclaje.png\")\n",
+    "##imagen_anclaje = Image.open(image_path_anclaje)\n",
+    "\n",
+    "##imagen_anclaje = imagen_anclaje.resize((100,50))  # Cambiar el tamaño si es necesario\n",
+    "##imagen_anclaje_tk = ImageTk.PhotoImage(imagen_anclaje)\n",
+    "\n",
+    "# Ruta total para que funcione el código\n",
     "# Cargar la imagen\n",
     "imagen_anclaje = Image.open(r\"C:\\Users\\jjeri\\OneDrive - SRK Consulting\\SRK!\\TKINTER\\Anchors\\anclaje.png\")\n",
-    "#imagen_anclaje = imagen_anclaje.resize((100,50))  # Cambiar el tamaño si es necesario\n",
+    "imagen_anclaje = imagen_anclaje.resize((200,50))  # Cambiar el tamaño si es necesario\n",
     "imagen_anclaje_tk = ImageTk.PhotoImage(imagen_anclaje)\n",
     "\n",
     "# Crear una etiqueta para mostrar la imagen\n",
@@ -557,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +669,7 @@
     "    ax.set_ylabel('Carga [kN]')\n",
     "\n",
     "    # Limits\n",
-    "    ax.set_xlim(RL_X(1.00).Vector_x()[0] , RL_X(1.00).Vector_x()[1])  \n",
+    "    ax.set_xlim(RL_X(1.00).Vector_x()[0] , def_load_step[5]+10)  \n",
     "    ax.set_ylim(0 , Carga[5] + 50) \n",
     "\n",
     "    # Legend location\n",
@@ -683,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,13 +853,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "conexion = sqlite3.connect('ensayos.db') # Crea la base de datos o si ya esta creado realizará la conexión\n",
     "cursor = conexion.cursor()               # El cursor es un puntero que permite navegar y ejecutar comando SQL en la base de datos\n",
-    "\n",
     "# cursor. execute crea la tabla y permite realizar operaciones en la base de datos\n",
     "cursor.execute('''                       \n",
     "    CREATE TABLE IF NOT EXISTS ensayos (\n",
@@ -857,11 +877,8 @@
     "        steel_data TEXT,\n",
     "        Area_steel_total REAL,\n",
     "        Modulus_elasticity REAL\n",
-    "        \n",
-    "        \n",
     "    )\n",
     "''')\n",
-    "\n",
     "# CREATE THE COLUMNS FOR THE DATAS\n",
     "Number              = []\n",
     "Number_Lecture      = []\n",
@@ -876,8 +893,6 @@
     "    Number_Lecture.append(Aux_Lecture)\n",
     "    Number_Load.append(Aux_Load)\n",
     "    Number_Displacement.append(Aux_Displacement)\n",
-    "\n",
-    "\n",
     "if conexion is not None:\n",
     "    for columna in Number:\n",
     "        try:\n",
@@ -917,7 +932,52 @@
     "                pass\n",
     "else:\n",
     "    pass\n",
-    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "def guardar_ensayo():   \n",
+    "    nombre                  = Entry_id_anclaje.get()\n",
+    "    fecha                   = Entry_Fecha.get()\n",
+    "    Division                = Entry_Division.get()\n",
+    "    nivel                   = Entry_nivel.get()\n",
+    "    area_gato               = Entry_area_gato.get()\n",
+    "    coeficiente_ensayo      = Entry_Test_coefficient.get()\n",
+    "    service_load            = Entry_Carga_servicio.get()\n",
+    "    test_load               = Entry_Test_load.get()\n",
+    "    LL                      = Entry_LL.get()\n",
+    "    LB                      = Entry_LB.get()\n",
+    "    LC                      = Entry_LC.get()\n",
+    "    diameter_drillhole      = Entry_diametro_anclaje.get()\n",
+    "    steel_data              = Entry_steel_data.get()\n",
+    "    Area_steel_total        = Entry_Area_steel_total.get()\n",
+    "    Modulus_elasticity      = Entry_Modulus_elasticity.get()\n",
+    "\n",
+    "    cursor.execute(\"SELECT COUNT(*) FROM ensayos WHERE nombre=?\", (nombre,))\n",
+    "    existe = cursor.fetchone()[0]\n",
+    "\n",
+    "    if existe > 0:\n",
+    "        respuesta = messagebox.askquestion(\"Advertencia\", \"Ya existe un nombre guardado. ¿Deseas sobrescribirlo?\")\n",
+    "        if respuesta == \"yes\":\n",
+    "            # Elimina el registro existente\n",
+    "            cursor.execute(\"DELETE FROM ensayos WHERE nombre=?\", (nombre,))\n",
+    "        \n",
+    "            insertar_ensayo(cursor, nombre, fecha, Division, nivel, area_gato, coeficiente_ensayo, service_load, test_load, LL, LB, LC, diameter_drillhole, steel_data, Area_steel_total, Modulus_elasticity)\n",
+    "\n",
+    "            conexion.commit()\n",
+    "            actualizar_combobox_ensayos()\n",
+    "            messagebox.showinfo(\"Éxito\", \"Ensayo guardado con éxito.\")\n",
+    "        else:\n",
+    "            messagebox.showinfo(\"Éxito\" , \"Ensayo no guardado.\")\n",
+    "    else:\n",
+    "        # Realiza la inserción si no se desea sobrescribir\n",
+    "        insertar_ensayo(cursor, nombre, fecha, Division, nivel, area_gato, coeficiente_ensayo, service_load, test_load, LL, LB, LC, diameter_drillhole, steel_data, Area_steel_total, Modulus_elasticity)     \n",
+    "\n",
+    "\n",
+    "        \n",
+    "        conexion.commit() # se utiliza en Python cuando trabajas con bases de datos para confirmar (o \"commitear\") los cambios realizados en la base de dato\n",
+    "        actualizar_combobox_ensayos()\n",
+    "\n",
+    "        messagebox.showinfo(\"Éxito\", \"Ensayo guardado con éxito.\")\n",
     "        \n",
     "def insertar_ensayo(cursor,nombre,fecha,Division,nivel,area_gato,coeficiente_ensayo,service_load,test_load,LL,LB,LC,diameter_drillhole,steel_data,Area_steel_total,\n",
     "    Modulus_elasticity):\n",
@@ -963,57 +1023,10 @@
     "    ensayos_nombres = [ensayo[0] for ensayo in ensayos]\n",
     "    Entry_id_anclaje['values'] = ensayos_nombres\n",
     "\n",
-    "def guardar_ensayo():   \n",
-    "    nombre                  = Entry_id_anclaje.get()\n",
-    "    fecha                   = Entry_Fecha.get()\n",
-    "    Division                = Entry_Division.get()\n",
-    "    nivel                   = Entry_nivel.get()\n",
-    "    area_gato               = Entry_area_gato.get()\n",
-    "    coeficiente_ensayo      = Entry_Test_coefficient.get()\n",
-    "    service_load            = Entry_Carga_servicio.get()\n",
-    "    test_load               = Entry_Test_load.get()\n",
-    "    LL                      = Entry_LL.get()\n",
-    "    LB                      = Entry_LB.get()\n",
-    "    LC                      = Entry_LC.get()\n",
-    "    diameter_drillhole      = Entry_diametro_anclaje.get()\n",
-    "    steel_data              = Entry_steel_data.get()\n",
-    "    Area_steel_total        = Entry_Area_steel_total.get()\n",
-    "    Modulus_elasticity      = Entry_Modulus_elasticity.get()\n",
-    "\n",
-    "    cursor.execute(\"SELECT COUNT(*) FROM ensayos WHERE nombre=?\", (nombre,))\n",
-    "    existe = cursor.fetchone()[0]\n",
-    "\n",
-    "    if existe > 0:\n",
-    "        respuesta = messagebox.askquestion(\"Advertencia\", \"Ya existe un nombre guardado. ¿Deseas sobrescribirlo?\")\n",
-    "        if respuesta == \"yes\":\n",
-    "            # Elimina el registro existente\n",
-    "            cursor.execute(\"DELETE FROM ensayos WHERE nombre=?\", (nombre,))\n",
-    "        \n",
-    "            insertar_ensayo(cursor, nombre, fecha, Division, nivel, area_gato, coeficiente_ensayo, service_load, test_load, LL, LB, LC, diameter_drillhole, steel_data, Area_steel_total, Modulus_elasticity)\n",
-    "\n",
-    "            conexion.commit()\n",
-    "            actualizar_combobox_ensayos()\n",
-    "            messagebox.showinfo(\"Éxito\", \"Ensayo guardado con éxito.\")\n",
-    "        else:\n",
-    "            messagebox.showinfo(\"Éxito\" , \"Ensayo no guardado.\")\n",
-    "    else:\n",
-    "        # Realiza la inserción si no se desea sobrescribir\n",
-    "        insertar_ensayo(cursor, nombre, fecha, Division, nivel, area_gato, coeficiente_ensayo, service_load, test_load, LL, LB, LC, diameter_drillhole, steel_data, Area_steel_total, Modulus_elasticity)     \n",
-    "\n",
-    "\n",
-    "        \n",
-    "        conexion.commit() # se utiliza en Python cuando trabajas con bases de datos para confirmar (o \"commitear\") los cambios realizados en la base de dato\n",
-    "        actualizar_combobox_ensayos()\n",
-    "\n",
-    "        messagebox.showinfo(\"Éxito\", \"Ensayo guardado con éxito.\")\n",
     "       \n",
     "\n",
     "def mostrar_datos_ensayo():\n",
     "    seleccion = Entry_id_anclaje.get()\n",
-    "    #columnas_sql = \", \".join([f\"{col} = :{col}\" for col in Number])\n",
-    "    #cursor.execute(\"SELECT nombre, fecha, Division, nivel, area_gato, coeficiente_ensayo , service_load , test_load, LL , LB , LC , diameter_drillhole\"\n",
-    "    #\",steel_data,Area_steel_total,Modulus_elasticity , {columnas_sql}\"\n",
-    "    #\" FROM ensayos WHERE nombre=?\", (seleccion,))\n",
     "    cursor.execute(\"SELECT * FROM ensayos WHERE nombre=?\" , (seleccion,))\n",
     "    datos = cursor.fetchone()\n",
     "\n",
@@ -1086,6 +1099,7 @@
     "            #aux.delete(0,tk.END)\n",
     "            aux.config(text=f\"{datos[i]}\" )\n",
     "\n",
+    "\n",
     "actualizar_combobox_ensayos()"
    ]
   },
@@ -1098,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,9 +1138,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-16.42\n"
+     ]
+    }
+   ],
    "source": [
     "root.mainloop() # Este método hará un bucle eterno, esperando eventos del usuario, hasta que el usuario salga del programa...\n",
     "                # ... ya sea cerrando la ventana, o terminando el programa con una interrupción de teclado en la consola.\n",
