--- a/App_Anchors.ipynb
+++ b/App_Anchors.ipynb
@@ -21,12 +21,11 @@
    "outputs": [],
    "source": [
     "from    tkinter             import *\n",
-    "from    tkinter             import ttk , messagebox\n",
+    "from tkinter.ttk            import Combobox , Treeview\n",
     "import  tkinter             as tk\n",
     "import  matplotlib.pyplot   as plt\n",
     "from    matplotlib.backends.backend_tkagg import FigureCanvasTkAgg , NavigationToolbar2Tk #Realizar gráficos en tkinter con la librería plt\n",
     "from    PIL                 import ImageTk, Image # Cargar imagenes a la ventana\n",
-    "import  numpy               as np\n",
     "from    math                import *\n",
     "from tkinter.font import Font\n",
     "from scipy.stats import linregress\n",
@@ -66,7 +65,7 @@
    "outputs": [],
    "source": [
     "root.title(\"Anclajes V.01\")\n",
-    "frm = ttk.Frame(root , relief=SOLID) #Crea un recuadro\n",
+    "frm = Frame(root , relief=SOLID) #Crea un recuadro\n",
     "frm.grid(row=0, column=0) #Al recuadro se da formato grilla"
    ]
   },
@@ -104,7 +103,7 @@
    "outputs": [],
    "source": [
     "Label_id_anclaje          = Label(frm, text=\"ID Anclaje\" , font=font_label).grid(column=0 , row= 0)         \n",
-    "Entry_id_anclaje          = ttk.Combobox(frm , justify='center')\n",
+    "Entry_id_anclaje          = Combobox(frm , justify='center')\n",
     "Entry_id_anclaje.grid(column=1 , row= 0)\n",
     "\n",
     "Label_Nivel                   = Label(frm, text=\"Nivel\" , font=font_label).grid(column=0 , row= 1)\n",
@@ -132,7 +131,7 @@
     "        area_gato.set(0.0)\n",
     "\n",
     "# Crear la primera lista desplegable\n",
-    "combo_box_area_gato            = ttk.Combobox(frm,textvariable=\"Tipo de gato\" ,values=[\"K20\", \"K60\", \"K200\" , \"User define\"] , justify='center')\n",
+    "combo_box_area_gato            = Combobox(frm,textvariable=\"Tipo de gato\" ,values=[\"K20\", \"K60\", \"K200\" , \"User define\"] , justify='center')\n",
     "combo_box_area_gato.bind(\"<<ComboboxSelected>>\", lista_gatos)\n",
     "combo_box_area_gato.option_add('*TCombobox*Listbox.Justify', 'center')\n",
     "combo_box_area_gato.grid(column=3 , row= 0)\n",
@@ -486,7 +485,7 @@
     {
      "data": {
       "text/plain": [
-       "'2679343362432actualizar_texto'"
+       "'2477093826752actualizar_texto'"
       ]
      },
      "execution_count": 59,
@@ -499,18 +498,18 @@
     "                                #... este caso presionar tecla enter    \n",
     "    Test_load.set(float(Test_coefficient.get())*float(Carga_servicio.get()))\n",
     "\n",
-    "    for Aux_Carga, i , Aux_Presion in zip(Val_Carga , Percentage, Val_Presion ):\n",
+    "    for Aux_Carga, i , Aux_Presion,label in zip(Val_Carga , Percentage, Val_Presion , Val_label):\n",
     "        texto = round(Test_load.get()*i , 2)                    # Obtener el texto del Entry\n",
     "        Aux_Carga.config(text=texto)                            # Actualizar el texto de la Label\n",
     "        texto_1 = round(texto / area_gato.get() * 100 , 1 )     # Redondear a un decimal\n",
     "        Aux_Presion.delete(0,END)                               # deletes the contents of the entry\n",
     "        Aux_Presion.insert(0,texto_1)                           # Insert the new value\n",
-    "\n",
+    "        label.config(text=f\"{i*100}%\" )\n",
     "          \n",
     "# Asociar la tecla Enter con la función de actualización\n",
+    "Entry_Test_coefficient.bind(\"<Return>\", actualizar_texto)\n",
     "Entry_Test_load.bind(\"<Return>\", actualizar_texto)\n",
-    "Entry_Carga_servicio.bind(\"<Return>\", actualizar_texto)\n",
-    "Entry_Test_coefficient.bind(\"<Return>\", actualizar_texto)\n"
+    "Entry_Carga_servicio.bind(\"<Return>\", actualizar_texto)"
    ]
   },
   {
@@ -781,21 +780,18 @@
     "            Entry_creep_reload.insert(0 , f\"No Verifica ({subtract}mm)\" )\n",
     "            Entry_creep_reload.config(foreground='red')\n",
     "    \n",
-    "    if isinstance(pivot , np.float64): \n",
+    "    if isinstance(pivot , float): \n",
     "        if all(valor != pivot for valor in def_lockoff_step): \n",
     "        # Friction\n",
     "            slope_download , intercept_download , _, _ , _ = linregress(def_download_step[-3:] , Load_download_step[-3:])\n",
-    "            slope_reload , intercept_reload , _, _ , _     = linregress(def_reload_step[-3:] , Load_reload_step[-3:])\n",
-    "            slope_average = (slope_download + slope_reload) / 2\n",
-    "            intercept_average = (intercept_download + intercept_reload) / 2\n",
     "            Aux = def_download_step[0] * slope_download + intercept_download\n",
-    "            load_real = def_lockoff*slope_average + intercept_average\n",
-    "            friction = round(((Load_download_step[0] - Aux) / (2* load_real)) * 100 , 1)\n",
+    "            #load_real = def_lockoff*slope_average + intercept_average\n",
+    "            friction = round(((Load_download_step[0] - Aux) / (2* Load_download_step[0])) * 100 , 1) \n",
     "            Entry_friction.delete(0,END)\n",
     "            Entry_friction.insert(0 , friction )\n",
     "            \n",
     "            # Wedge income\n",
-    "            wedge_income = round(x_lockoff - def_lockoff , 2 )\n",
+    "            wedge_income = round(x_lockoff - def_lockoff , 1 )\n",
     "            Entry_wedge_income.delete(0,END)\n",
     "            Entry_wedge_income.insert(0 , wedge_income )\n",
     "            \n",
@@ -879,15 +875,16 @@
     "    load.config(text=texto)\n",
     "\n",
     "def principal(evento=None):\n",
-    "    actualizar_texto(evento)\n",
+    "    \n",
     "    for entry, label, load in zip(Val_Presion, Val_label, Val_Carga):\n",
     "        actualizar_label(entry, label, load)\n",
+    "    \n",
     "    Funciones(evento)\n",
     "\n",
     "# Asociar el evento <Return> a la función principal\n",
     "for entry, lect in zip(Val_Presion , Val_Lect):\n",
     "    entry.bind(\"<Return>\", principal)\n",
-    "    lect.bind(\"<Return>\", principal)\n"
+    "    lect.bind(\"<Return>\", principal)"
    ]
   },
   {
@@ -988,7 +985,7 @@
     "    existe = cursor.fetchone()[0]\n",
     "\n",
     "    if existe > 0:\n",
-    "        respuesta = messagebox.askquestion(\"Advertencia\", \"Ya existe un nombre guardado. ¿Deseas sobrescribirlo?\")\n",
+    "        respuesta = tk.messagebox.askquestion(\"Advertencia\", \"Ya existe un nombre guardado. ¿Deseas sobrescribirlo?\")\n",
     "        if respuesta == \"yes\":\n",
     "            # Elimina el registro existente\n",
     "            cursor.execute(\"DELETE FROM ensayos WHERE nombre=?\", (nombre,))\n",
@@ -998,9 +995,9 @@
     "\n",
     "            conexion.commit()\n",
     "            actualizar_combobox_ensayos()\n",
-    "            messagebox.showinfo(\"Éxito\", \"Ensayo guardado con éxito.\")\n",
+    "            tk.messagebox.showinfo(\"Éxito\", \"Ensayo guardado con éxito.\")\n",
     "        else:\n",
-    "            messagebox.showinfo(\"Éxito\" , \"Ensayo no guardado.\")\n",
+    "            tk.messagebox.showinfo(\"Éxito\" , \"Ensayo no guardado.\")\n",
     "    else:\n",
     "        # Realiza la inserción si no se desea sobrescribir\n",
     "        insertar_ensayo(cursor, nombre, fecha, Division, nivel, area_gato, coeficiente_ensayo, service_load, test_load, LL, LB, LC, diameter_drillhole, steel_data, Area_steel_total, \n",
@@ -1011,7 +1008,7 @@
     "        conexion.commit() # se utiliza en Python cuando trabajas con bases de datos para confirmar (o \"commitear\") los cambios realizados en la base de dato\n",
     "        actualizar_combobox_ensayos()\n",
     "\n",
-    "        messagebox.showinfo(\"Éxito\", \"Ensayo guardado con éxito.\")\n",
+    "        tk.messagebox.showinfo(\"Éxito\", \"Ensayo guardado con éxito.\")\n",
     "        \n",
     "def insertar_ensayo(cursor,nombre,fecha,Division,nivel,area_gato,coeficiente_ensayo,service_load,test_load,LL,LB,LC,diameter_drillhole,steel_data,Area_steel_total,\n",
     "    Modulus_elasticity, recta_limite, creep , load_reload, friction, cuna):\n",
@@ -1141,13 +1138,14 @@
     "    conexion = sqlite3.connect(\"ensayos.db\")\n",
     "    cursor = conexion.cursor()\n",
     "\n",
+    "    \n",
     "\n",
     "    # Realiza una consulta SQL para obtener todos los valores de la columna especificada\n",
     "    cursor.execute(\"SELECT nombre, fecha, nivel, service_load , test_load,steel_data,Area_steel_total, recta_limite, creep , load_reload, friction, cuna FROM ensayos\")\n",
     "    datos = cursor.fetchall()\n",
     "\n",
     "    # Crear un Treeview para mostrar los datos\n",
-    "    tree = ttk.Treeview(Resumen, columns=(\"nombre\", \"fecha\",\"nivel\", \"service_load\",\"test_load\",\"steel_data\",\"Area_steel_total\", \"recta_limite\", \"creep\" , \"load_reload\", \"friction\", \"cuna\"), show='headings')\n",
+    "    tree = Treeview(Resumen, columns=(\"nombre\", \"fecha\",\"nivel\", \"service_load\",\"test_load\",\"steel_data\",\"Area_steel_total\", \"recta_limite\", \"creep\" , \"load_reload\", \"friction\", \"cuna\"), show='headings')\n",
     "    tree.pack()\n",
     "\n",
     "    tree.heading(\"nombre\", text=\"Nombre\")\n",
@@ -1184,8 +1182,7 @@
     "        tree.insert(\"\", \"end\", values=dato)\n",
     "        \n",
     "    # Cerrar la conexión a la base de datos\n",
-    "    conexion.close()\n",
-    "\n"
+    "    conexion.close()"
    ]
   },
   {
@@ -1228,27 +1225,11 @@
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\jjeri\\AppData\\Local\\Programs\\Python\\Python39\\lib\\tkinter\\__init__.py\", line 1892, in __call__\n",
-      "    return self.func(*args)\n",
-      "  File \"C:\\Users\\jjeri\\AppData\\Local\\Temp/ipykernel_4496/1237840874.py\", line 18, in principal\n",
-      "    actualizar_texto(evento)\n",
-      "  File \"C:\\Users\\jjeri\\AppData\\Local\\Temp/ipykernel_4496/2715059303.py\", line 8, in actualizar_texto\n",
-      "    texto_1 = round(texto / area_gato.get() * 100 , 1 )     # Redondear a un decimal\n",
-      "ZeroDivisionError: float division by zero\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "root.mainloop() # Este método hará un bucle eterno, esperando eventos del usuario, hasta que el usuario salga del programa...\n",
     "                # ... ya sea cerrando la ventana, o terminando el programa con una interrupción de teclado en la consola.\n",
-    "conexion.close()"
+    "conexion.close() # Close the database conexion "
    ]
   }
  ],
